@@ -10,6 +10,7 @@ Bugfixes:
 * There is issue in chat window layout firefox #548
 * Add limit and page_limit false while deleting annotations by owner guid.
 * XSS Security fix, with OssnPagination class, thanks to Curesec.com
+* Delete component settings upon its deletion #538
 
 
 OSSN - OPEN SOURCE SOCIAL NETWORK 3.4-3.5
